--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"description": "Funny break reminder for the geek folks",
 	"icon": "images/cup.png",
 	"version": "0.0.1",
+	"repository": {
+		"type": "git",
+    	"url": "https://github.com/jibar026/takeabreak"
+	},
 	"engines": {
 		"vscode": "^1.64.0"
 	},
@@ -11,9 +15,14 @@
 		"Other"
 	],
 	"activationEvents": [
-        "*"
+        "onStartupFinished"
 	],
 	"main": "./dist/extension.js",
+	"publisher": "jibar026",
+	"author": {
+	  "name": "Juan C Ibarra",
+	  "email": "jibar026@fiu.edu"
+	},
 	"contributes": {
 		"commands": [
 			{
